--- a/install
+++ b/install
@@ -83,6 +83,8 @@ test -z "$prefix" && prefix=/usr/local
 test -z "$btmakefilepath" && btmakefilepath="$prefix/btmakefile"
 test -z "$exepath" && exepath="$prefix/bin"
 
+if false
+then
 sed -e '
 s#@RECURSIVE-\([^@]*\)@#\
 real-\1:\
@@ -155,6 +157,8 @@ endif\
 		fi; \\\
 	fi#
 ' < Makefile.Include.in > Makefile.Include
+fi
+make Makefile.Include
 
 if $exit_after_sed
 then
