--- a/install
+++ b/install
@@ -83,81 +83,6 @@ test -z "$prefix" && prefix=/usr/local
 test -z "$btmakefilepath" && btmakefilepath="$prefix/btmakefile"
 test -z "$exepath" && exepath="$prefix/bin"
 
-if false
-then
-sed -e '
-s#@RECURSIVE-\([^@]*\)@#\
-real-\1:\
-btmake-\1-pre: real-\1-pre\
-btmake-\1-post: real-\1-post\
-real-\1-pre:\
-real-\1-post:\
-\1:\
-   ifdef DEBUG\
-	@echo "Making btmake-\1-pre ..."\
-   endif\
-	@$(MAKE) -f $(MAKEFILE) $(NPD) btmake-\1-pre || { echo -e -n "$(DEFAULTCOLOR)" \&\& exit 1; }\
-	\
-ifdef DIRS\
-   ifdef DEBUG\
-	@echo "Making DIRS $(DIRS) ..."\
-   endif\
-	@for i in $(foreach i,$(DIRS),$(i)); do \\\
-		MAKEFILE=Makefile $(MAKE) -f Makefile -C $$i $(NPD) \1 || { echo -e -n "$(DEFAULTCOLOR)" \&\& exit 1; }; \\\
-	done;\
-endif\
-	\
-ifdef SUBTARGETS\
-   ifdef DEBUG\
-	@echo "Making SUBTARGETS $(SUBTARGETS) ..."\
-   endif\
-	@for i in $(foreach i,$(SUBTARGETS),$(i)); do \\\
-		$(MAKE) -f $(MAKEFILE) $(NPD) $$i-\1 || { echo -e -n "$(DEFAULTCOLOR)" \&\& exit 1; }; \\\
-	done;\
-endif\
-	\
-ifdef SUBMAKES\
-   ifdef DEBUG\
-	@echo "Making SUBMAKES $(SUBMAKES) ..."\
-   endif\
-	@for i in $(foreach i,$(SUBMAKES),$(i)); do \\\
-		MAKEFILE=Makefile.$$i $(MAKE) -f Makefile.$$i $(NPD) \1 || { echo -e -n "$(DEFAULTCOLOR)" \&\& exit 1; }; \\\
-	done;\
-endif\
-	\
-	@$(MAKE) -f $(MAKEFILE) $(NPD) real-\1 || { echo -e -n "$(DEFAULTCOLOR)" \&\& exit 1; }\
-	\
-   ifdef DEBUG\
-	@echo "Making btmake-\1-post ..."\
-   endif\
-	@$(MAKE) -f $(MAKEFILE) $(NPD) btmake-\1-post || { echo -e -n "$(DEFAULTCOLOR)" \&\& exit 1; }#
-s#§§PATTERNRULE§\([^§]*\)§\([^§]*\)§\([^§]*\)§\([^§]*\)§\([^§]*\)§§#\
-\2: \1\
-ifndef PRINTFLAGS\
-   ifndef PRINTSOURCES\
-	@echo -e -n "$(ACTIONCOLOR)\3 $(OUTPUTCOLOR)$(THISDIR)/$@$(ACTIONCOLOR): $(ATTENTIONCOLOR)"\
-   else\
-	@echo -e -n "$(ACTIONCOLOR)\3 $(INPUTCOLOR)$(addprefix $(THISDIR)/,\4)$(ACTIONCOLOR) to $(OUTPUTCOLOR)$(THISDIR)/$@$(ACTIONCOLOR): $(ATTENTIONCOLOR)"\
-   endif\
-else\
-	@echo -e -n "$(ACTIONCOLOR)\3 $(INPUTCOLOR)$(addprefix $(THISDIR)/,\4)$(ACTIONCOLOR) to $(OUTPUTCOLOR)$(THISDIR)/$@$(ACTIONCOLOR) with cmdline $(FLAGCOLOR)\5$(ACTIONCOLOR): $(ATTENTIONCOLOR)"\
-endif\
-	@if ! ( \5 ) 2>$(STDERROR); then \\\
-		echo -e "$(FAILEDCOLOR)failed:"; \\\
-		cat $(STDERROR); \\\
-		echo -e -n "$(DEFAULTCOLOR)"; \\\
-		false; \\\
-	else \\\
-		if test -s $(STDERROR); then \\\
-			echo -e "$(WARNINGCOLOR)ok, but warnings:"; \\\
-			cat $(STDERROR); \\\
-			echo -e -n "$(DEFAULTCOLOR)"; \\\
-		else \\\
-			echo -e "$(WELLCOLOR)ok.$(DEFAULTCOLOR)"; \\\
-		fi; \\\
-	fi#
-' < Makefile.Include.in > Makefile.Include
-fi
 make Makefile.Include
 
 if $exit_after_sed
@@ -186,13 +111,11 @@ s#@exepath@#$exepath/btmakefile#
 s#@version@#$version#" < btmakefile.in > btmakefile
 	
 	rmdir wrappers    2>/dev/null
-	rmdir workarounds 2>/dev/null
 	
 	call_install -d $SET_USR $SET_GRP -m 755 "$extraprefix/$exepath"
 	call_install -d $SET_USR $SET_GRP -m 755 "$extraprefix/$btmakefilepath"
 	test -d wrappers     && call_install -d $SET_USR $SET_GRP -m 755 "$extraprefix/$btmakefilepath/wrappers" 
 	test -d wrappers/sys && call_install -d $SET_USR $SET_GRP -m 755 "$extraprefix/$btmakefilepath/wrappers/sys" 
-	test -d workarounds  && call_install -d $SET_USR $SET_GRP -m 755 "$extraprefix/$btmakefilepath/workarounds" 
 	
 	call_install $SET_USR $SET_GRP -m 644 AUTHORS "$extraprefix/$btmakefilepath"
 	call_install $SET_USR $SET_GRP -m 644 COPYING "$extraprefix/$btmakefilepath"
@@ -205,12 +128,12 @@ s#@version@#$version#" < btmakefile.in > btmakefile
 	call_install $SET_USR $SET_GRP -m 644 README "$extraprefix/$btmakefilepath"
 	call_install $SET_USR $SET_GRP -m 755 MakeVersionControl "$extraprefix/$btmakefilepath"
 	call_install $SET_USR $SET_GRP -m 755 test4sint_overflow.sh "$extraprefix/$btmakefilepath"
+	call_install $SET_USR $SET_GRP -m 644 libbtmakefile.a "$extraprefix/$btmakefilepath"
 	
 	# Generated files:
 	call_install $SET_USR $SET_GRP -m 644 Makefile.System "$extraprefix/$btmakefilepath"
 	test -d wrappers     && call_install $SET_USR $SET_GRP -m 644    wrappers/*.h      "$extraprefix/$btmakefilepath/wrappers"
 	test -d wrappers/sys && call_install $SET_USR $SET_GRP -m 644    wrappers/sys/*.h  "$extraprefix/$btmakefilepath/wrappers/sys"
-	test -d workarounds  && call_install $SET_USR $SET_GRP -m 644 workarounds/*.{a,so} "$extraprefix/$btmakefilepath/workarounds"
 	
 	call_install $SET_USR $SET_GRP -m 755 btmakefile "$extraprefix/$exepath"
 	
