--- a/install
+++ b/install
@@ -19,7 +19,7 @@ Possible args are:
 [1] The argument to this option SHOULD NOT contain any spaces. If you discard 
     this constraint, you may end up in a broken installation.
 
-[2] --extra-prefixl is only use while installing. This is a hack for Gentoo, 
+[2] --extra-prefixl is only uses while installing. This is a hack for Gentoo, 
     so we can install the package in the image directory, while it is in fact 
     configured for another directory. Obviously, the right way had been to 
     replace the install program, but don't tell me, tell the Gentoo 
